# UVG-CC3085-Inteligencia-Artificial

./: .gitignore  README.md
othello-project/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
othello-project/admin/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
othello-project/admin/app/: README.md  globals.css  layout.tsx  page.tsx
othello-project/admin/app/games/: README.md
othello-project/admin/app/live-games/: README.md  page.tsx
othello-project/admin/app/login/: README.md  page.tsx
othello-project/admin/app/players/: README.md  page.tsx
othello-project/admin/app/rounds/: README.md
othello-project/admin/app/standings/: README.md  page.tsx
othello-project/admin/app/tournaments/: README.md  page.tsx
othello-project/admin/components/: AdminShell.tsx  ConnectionStatus.tsx  GameReplay.tsx  GameViewer.tsx  LiveGameCard.tsx  LiveGamesGrid.tsx  LiveGamesTable.tsx  MiniOthelloBoard.tsx  OthelloBoard.tsx  PairingsTable.tsx  PlayersTable.tsx  README.md  StandingsTable.tsx
othello-project/admin/lib/: README.md  api.ts  auth.ts  types.ts  ws.ts
othello-project/client/: README.md  __init__.py  bot_client.py  competitive_bot.py  othello_ai.py  sample_bot.py
othello-project/docs/: othello_bot.md
othello-project/server/: README.md  __init__.py  admin_auth.py  db.py  game_rules.py  main.py  models.py  pairing.py  schemas.py  tournament.py
othello-project/tests/: README.md  test_admin_api.py  test_bot_client.py  test_db_migrations.py  test_game_flow.py  test_game_rules.py  test_othello_ai.py  test_pairing.py
(+13 files in other folders)
