[project]
name = "othello-tournament-mvp"
version = "0.1.0"
description = "MVP Othello/Reversi tournament server and bot client"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "sqlmodel>=0.0.22,<0.1",
    "uvicorn>=0.32,<1.0",
    "websockets>=14.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<0.29",
    "pytest>=8.3,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server", "client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
